# inference-sawit

./: .gitignore  CUDA_COMPATIBILITY_GUIDE.md  config.py  main.py  models.py  pyproject.toml  test_cuda_compatibility.py  test_integration_api.py  test_performance_comprehensive.py  test_performance_focused.py  test_performance_long_videos.py  test_performance_simple.py  test_video_processor_fix.py
.kiro/specs/video-processing-pipeline/: design.md  requirements.md  tasks.md
dashboard/: app.py
dashboard/templates/: index.html
migrations/versions/: a8e34ea9d9ca_add_output_video_path_and_model_name_.py
utils/: counter.py  database_manager.py  video_processor.py  video_validator.py
